tests/resources/invalid/type/function/no_class.mamba
def f(self) => print("cannot have self outside class")
